Add icons&compinfo (#1079)
* add icons premium request

* small fix

* add icons

* small fix

* add icons

* add compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -79,3 +79,108 @@ twitcast:
 
 viabus:
   - com.indyzalab.transitia/com.indyzalab.transitia.SplashActivity
+
+time_calculator:
+  - com.teaxapp.hourcal/com.teaxapp.hourcal.MainActivity
+
+autoshare:
+  - com.joaomgcd.autoshare/com.joaomgcd.autoapps.ActivityLaunchApp
+
+power_shortcuts:
+  - com.ss.powershortcuts/com.ss.powershortcuts.MainActivity
+
+stitch:
+  - soko.ekibun.stitch/soko.ekibun.stitch.MainActivity
+
+do_it_now:
+  - com.levor.liferpgtasks/com.levor.liferpgtasks.view.activities.SplashActivity
+
+autotools:
+  - com.joaomgcd.autotools/com.joaomgcd.autoapps.ActivityLaunchApp
+
+chwazi:
+  - com.tendadigital.chwaziApp/com.tendadigital.chwaziApp.SplashScreen
+
+quickshort:
+  - com.atolphadev.quikshort/com.atolphadev.quikshort.activities.MainActivity
+
+board:
+  - com.board/com.board.Main
+
+structured:
+  - io.unorderly.structured/com.structured.MainActivity
+
+tn2:
+  - com.janzimola.goal_venture2/com.janzimola.goal_venture.MainActivity
+
+lucky_draw:
+  - com.snake.luckydraw/com.snake.luckydraw.MainActivity
+
+purchased_apps:
+  - com.azefsw.purchasedapps/com.azefsw.purchasedapps.ui.startup.StartupActivity
+
+tasks_to_do_list:
+  - com.tasks.android/com.tasks.android.activities.MainActivity
+
+smarter_bookmarks:
+  - com.smarter.technologist.android.smarterbookmarks/com.smarter.technologist.android.smarterbookmarks.MainActivity
+
+autovoice:
+  - com.joaomgcd.autovoice/com.joaomgcd.autoapps.ActivityLaunchApp
+
+pinned_shortcuts:
+  - rk.android.app.pinnedshortcuts/rk.android.app.pinnedshortcuts.activities.launch.LaunchActivity
+
+start_me:
+  - com.startme/com.startme.activities.MainActivity
+
+timer_widget_tea_timer:
+  - net.hirschkorn.teatime/net.hirschkorn.teatime.main.MainActivity
+
+nt_calculator:
+  - thanhletranngoc.calculator.pro/thanhletranngoc.calculator.pro.activities.MainActivity
+
+onetwo:
+  - com.nicue.onetwo/com.nicue.onetwo.MainActivity
+
+evil_spin:
+  - evil.spin/evil.spin.MainActivity
+
+faraday:
+  - pw.faraday.faraday/im.vector.application.features.Alias
+
+nymvpn:
+  - net.nymtech.nymvpn/net.nymtech.nymvpn.ui.MainActivity
+
+radioplayer_ukraine:
+  - ua.radioplayer.app/ua.radioplayer.radioplayer.MainActivity
+
+storage_box_organizer:
+  - dev.freedom45.whatsinthebox/crc648871252fdab0bcfd.SplashActivity
+
+smartworks_mobile:
+  - com.smartworks/com.smartworks.MainActivity
+
+orange_tv:
+  - tv.nangu.orange.android/tv.nangu.SplashActivity
+
+formula_e:
+  - com.fiaformulae.formulae/com.fiaformulae.formulae.SplashActivity
+
+routematic:
+  - com.routematic.employee/com.routematic.employee.MainActivity
+
+dbz_battery_widget:
+  - com.tomer.dbz.widget/com.tomer.dbz.widget.MainActivity
+
+myinfocert:
+  - it.infocert.myinfocert.phoenix/com.mobile.android.infocert.section.launch.ui.LaunchActivity
+
+notisave_tenqube:
+  - com.tenqube.notisave/com.tenqube.notisave.presentation.splash.SplashActivity
+
+western_union_send_money:
+  - com.westernunion.moneytransferr3app.ca/com.wurnmobile.MainActivity
+
+pvz:
+  - com.popcap.pvz_na/com.popcap.pvz_na.COPPAActivity
