added ringotel icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -184,3 +184,6 @@ western_union_send_money:
 
 pvz:
   - com.popcap.pvz_na/com.popcap.pvz_na.COPPAActivity
+
+ringotel:
+  - smile.ringotel/smile.MainActivity
