--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -187,3 +187,9 @@ pvz:
 
 airalo:
   - com.mobillium.airalo/com.airalo.splash.SplashActivity
+
+roamless:
+  - com.roamless.roamless/com.roamless.roamless.MainActivity
+
+streamyfin:
+  - com.fredrikburmester.streamyfin/com.fredrikburmester.streamyfin.MainActivity
