--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -185,5 +185,8 @@ western_union_send_money:
 pvz:
   - com.popcap.pvz_na/com.popcap.pvz_na.COPPAActivity
 
+ringotel:
+  - smile.ringotel/smile.MainActivity
+
 airalo:
   - com.mobillium.airalo/com.airalo.splash.SplashActivity
