Streamyfin and Roamless icon addition (#1082)
Co-authored-by: Gitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -190,3 +190,9 @@ ringotel:
 
 airalo:
   - com.mobillium.airalo/com.airalo.splash.SplashActivity
+
+roamless:
+  - com.roamless.roamless/com.roamless.roamless.MainActivity
+
+streamyfin:
+  - com.fredrikburmester.streamyfin/com.fredrikburmester.streamyfin.MainActivity
