--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -235,3 +235,6 @@ sky_tg24:
 
 honor_of_kings:
   - com.levelinfinite.sgameGlobal/com.levelinfinite.sgameGlobal.SGameGlobalActivity
+
+ark:
+  - com.studiowildcard.arkuse/com.epicgames.ue4.SplashActivity
