Add icons&compinfo (#1083)
* add icons

* add compinfo

* small fix

* fix template

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -196,3 +196,45 @@ roamless:
 
 streamyfin:
   - com.fredrikburmester.streamyfin/com.fredrikburmester.streamyfin.MainActivity
+
+metrolink:
+  - com.justride.metrolink/io.ionic.starter.MainActivity
+
+haystack_news:
+  - com.haystack.android/com.haystack.android.headlinenews.ui.loading.LoadingActivity
+
+pdfelement:
+  - com.wondershare.pdfelement/com.wondershare.pdfelement.features.welcome.WelcomeActivity
+
+ffmpeg_media_encoder:
+  - com.silentlexx.ffmpeggui/com.silentlexx.ffmpeggui.activities.Gui
+
+freedom_mobile:
+  - ca.windmobile.selfcare.prod/ca.windmobile.selfcare.prod.MainActivity
+
+dafont:
+  - dafonts.dafonts.dafont/dafonts.dafonts.dafont.MainActivity
+
+digipost:
+  - no.digipost.android/no.digipost.android.MainActivity
+
+cloudone:
+  - com.Cloudone/com.Cloudone.MainActivity
+
+drops_icon_pack:
+  - com.drops.icons/com.drops.icons.MainActivity
+
+fairbuds:
+  - com.fairphone.android.fairbudsapp/com.fairphone.fairsound.MainActivity
+
+smart_id:
+  - com.smart_id/com.stagnationlab.sk.MainActivity
+
+sky_tg24:
+  - com.bskyb.tg24.android/com.bskyb.skynews.android.activity.AppLoadingActivity
+
+honor_of_kings:
+  - com.levelinfinite.sgameGlobal/com.levelinfinite.sgameGlobal.SGameGlobalActivity
+
+ark:
+  - com.studiowildcard.arkuse/com.epicgames.ue4.SplashActivity
