Add new StreetCompleteEE CompInfo and CardReader icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -238,3 +238,9 @@ honor_of_kings:
 
 ark:
   - com.studiowildcard.arkuse/com.epicgames.ue4.SplashActivity
+
+scee:
+  - de.westnordost.streetcomplete.expert/de.westnordost.streetcomplete.screens.main.MainActivity
+
+cardreader:
+  - digital.cardreader/digital.cardreader.ui.MainActivity
