--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -244,3 +244,39 @@ scee:
 
 cardreader:
   - digital.cardreader/digital.cardreader.ui.MainActivity
+
+shonenx:
+  - com.shonen.x/com.example.nekoflow.MainActivity
+
+cloud_gallery:
+  - com.canopas.cloud_gallery/com.canopas.cloud_gallery.MainActivity
+
+sunup:
+  - org.unifiedpush.distributor.sunup/org.unifiedpush.distributor.sunup.activities.MainActivity
+
+suic_player:
+  - com.soiadmahedi.suicTh/com.soiadmahedi.suicTh.HomeActivity
+
+dnsnet:
+  - dev.clombardo.dnsnet/dev.clombardo.dnsnet.MainActivity
+
+ironfox:
+  - org.ironfoxoss.ironfox/org.ironfoxoss.ironfox.App
+
+lotus:
+  - com.dn0ne.lotus/com.dn0ne.player.MainActivity
+
+nothing_keyboard:
+  - com.arunk140.inputmethod.latin/org.futo.inputmethod.latin.uix.settings.SettingsActivity
+
+speakgpt:
+  - org.teslasoft.assistant/org.teslasoft.assistant.ui.activities.MainActivity
+
+insta_eclipse:
+  - ps.reso.instaeclipse/ps.reso.instaeclipse.MainActivity
+
+zipxtract:
+  - com.wirelessalien.zipxtract/com.wirelessalien.zipxtract.activity.MainActivity
+
+micts:
+  - com.parallelc.micts/com.parallelc.micts.ui.activity.MainActivity
