--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -280,3 +280,6 @@ zipxtract:
 
 micts:
   - com.parallelc.micts/com.parallelc.micts.ui.activity.MainActivity
+
+gloom:
+  - com.materiiapps.gloom.debug/gloom.icons.classic.Main
