add fish tail, re-position the fish, add freeform alts

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -32,8 +32,12 @@ batch_uninstaller:
 catalone:
   - com.galbro.cataloneandroid/com.unity3d.player.UnityPlayerActivity
 
+catalone_alt_1: {}
+
 catalone2:
   - com.galbro.catalone2/com.unity3d.player.UnityPlayerActivity
+
+catalone2_alt_1: {}
 
 innovestx:
   - com.scbs.easyinvest/com.scbs.easyinvest.MainActivity
