Add and update 14 icons (#1087)
* add and update 14 icons

* move icons to their correct locations and add pngs

* add fish tail, re-position the fish, add freeform alts

* adjust the colors

* fix catalone2 alt

* update morprom to remove white border

---------

Co-authored-by: flameshikari <mail@hexed.pw>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,47 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+myais:
+  - com.ais.mimo.eservice/com.adl.mfaf.MainActivity
+
+mymo:
+  - com.mobilife.gsb.mymo/com.mobilife.gsb.mymomylife.features.splash.StartScreenActivity
+
+outlook_lite:
+  - com.microsoft.outlooklite/com.microsoft.outlooklite.sms.SmsMainActivity
+
+myais_alt_1: {}
+
+_3steps:
+  - com.nbtc.threesteps/com.nbtc.threesteps.presentation.main.SplashScreenActivity
+
+batch_uninstaller:
+  - com.saha.batchuninstaller/com.saha.batchuninstaller.ui.SplashScreenActivity
+
+catalone:
+  - com.galbro.cataloneandroid/com.unity3d.player.UnityPlayerActivity
+
+catalone_alt_1: {}
+
+catalone2:
+  - com.galbro.catalone2/com.unity3d.player.UnityPlayerActivity
+
+catalone2_alt_1: {}
+
+innovestx:
+  - com.scbs.easyinvest/com.scbs.easyinvest.MainActivity
+
+morprom:
+  - com.mor.promplus/com.mor.promplus.MainActivity
+
+rama_app:
+  - org.ramathibodi.ramaapp/com.scb.hosplatform.activity.SplashActivity
+
+thaid:
+  - th.go.dopa.bora.dims.ddopa/th.go.dopa.bora.dims.ddopa.MainActivity
+
+xplore:
+  - com.pttor.xplore/com.xplore.MainActivity
+
+we_mahidol:
+  - th.ac.mahidol.SCBxMU.WeMahidol/th.ac.mahidol.SCBxMU.WeMahidol.module.splash.activity.SplashScreenActivity
