Add icons for WzSabre, Literal Word, and WatchDuty and CompInfo for Vantrue

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -56,3 +56,15 @@ xplore:
 
 we_mahidol:
   - th.ac.mahidol.SCBxMU.WeMahidol/th.ac.mahidol.SCBxMU.WeMahidol.module.splash.activity.SplashScreenActivity
+
+vantrue:
+  - com.sanjiang.vantrue/com.sanjiang.vantrue.cloud.ui.splash.SplashAct
+
+watchduty:
+  - org.watchduty.app/org.watchduty.app.MainActivity
+
+literalword:
+  - com.literalword.mobile_app/com.literalword.mobile_app.MainActivity
+
+wzsabre:
+  - app.sabre.wzsabre/app.sabre.wzsabre.MainActivity
