3 new mappings and 10 new icons (#1089)
Co-authored-by: Gitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -57,6 +57,45 @@ xplore:
 we_mahidol:
   - th.ac.mahidol.SCBxMU.WeMahidol/th.ac.mahidol.SCBxMU.WeMahidol.module.splash.activity.SplashScreenActivity
 
+activity_launcher:
+  - de.szalkowski.activitylauncher.rustore_fork/de.szalkowski.activitylauncher.rustore_fork.ui.activity.MainActivity
+
+paotang:
+  - com.ktb.customer.qr/com.ktb.customer.qr.feature.ekyc.ui.splashscreen.EkycSplashScreenActivity
+
+streaming:
+  - com.settrade.streaming/com.settrade.streaming.SplashActivity
+
+check_thailand_lottery:
+  - com.postjung.lotto/com.postjung.lotto.Main
+
+easy_open_link:
+  - de.audioattack.openlink/de.audioattack.openlink.ui.MainActivity
+
+glo_lottery:
+  - th.or.glo.glolotteryapp/com.glo.lottery.glolottery.Main.SplashScreenActivity
+
+gold_now:
+  - com.huasengheng.rmi/com.huasengheng.rmi.MainActivity
+
+pptv_hd_36:
+  - com.mepassion.android.meconnect.ui/com.pptv36.pptv.SplashScreen.SplashScreenActivity
+
+talaadthai_online:
+  - com.talaadthai.online/com.talaadthai.online.MainActivity
+
+top_news:
+  - th.co.topnews.live/com.example.topnews_mobile_app_flutter.MainActivity
+
+true_iservice:
+  - com.truelife.mobile.android.trueiservice/com.iservice.MainActivity
+
+truevisions:
+  - com.truevisions.android/com.setplex.android.StartActivity
+
+tungngern:
+  - com.ktb.merchant.tungngern/com.ktb.merchant.tungngern.views.splashscreen.SplashScreenLoginActivity
+
 vantrue:
   - com.sanjiang.vantrue/com.sanjiang.vantrue.cloud.ui.splash.SplashAct
 
