add icons premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -107,3 +107,30 @@ literalword:
 
 wzsabre:
   - app.sabre.wzsabre/app.sabre.wzsabre.MainActivity
+
+veganstart:
+  - org.peta.veganstart3/com.poprocketlabs.veganstart.MainActivity
+
+segway_ninebot:
+  - com.ninebot.segway/cn.ninebot.ninebot.mainshell.SplashActivity
+
+xdrip:
+  - com.eveningoutpost.dexdrip/com.eveningoutpost.dexdrip.Home
+
+monument_valley_3:
+  - com.netflix.NGP.MonumentValley3/com.unity3d.player.UnityPlayerActivity
+
+soflow:
+  - com.soflowapp/com.soflow.app.MainActivity
+
+hello_better:
+  - de.hellobetter.companion/de.hellobetter.companion.MainActivity
+
+eon_drive:
+  - com.eon.emobility/fi.virta.ui.splash.LauncherActivity
+
+sentinelone:
+  - com.sentinelone.mobile/com.sentinelone.mobile.MainActivity
+
+mein_eon:
+  - de.ones.eon.csc/com.eon.meineon.MainActivity
