--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -134,3 +134,76 @@ sentinelone:
 
 mein_eon:
   - de.ones.eon.csc/com.eon.meineon.MainActivity
+
+tabby:
+  - app.tabby.client/app.tabby.client.MainActivity
+
+fantasy_football_my_playbook:
+  - com.fantasypros.myplaybook/com.fantasypros.myplaybook.NewMainActivity
+
+the_mirror:
+  - com.mirror.news/com.reachplc.main.ui.splash.SplashActivity
+
+kpass:
+  - com.korovan.kpass/com.korovan.kpass.MainActivity
+
+youtify:
+  - music.ytstream.youtify/com.ryanheise.audioservice.AudioServiceActivity
+
+cashify:
+  - com.reglobe.cashify/in.lego.app.MainActivity
+  - com.reglobe.cashify/in.lego.app.MainActivityAliasDiwali
+
+passport_parking:
+  - com.passportparking.mobile/io.parking.core.ui.activities.SplashActivity
+
+stay_put:
+  - org.y20k.stayput/org.y20k.stayput.MainActivity
+
+exclave:
+  - com.github.dyhkwong.sagernet/io.nekohasekai.sagernet.ui.MainActivity
+
+decathlon_shopping_app:
+  - sg.decathlon.app/sg.decathlon.app.splash.SplashActivity
+
+image_to_pdf:
+  - com.vidmar.pti/com.vidmar.pti.SplashScreen
+
+rode_reporter:
+  - com.rode.rodereporter/com.rode.FirebaseActivity
+
+superhuman_mail:
+  - com.superhuman.mail/com.superhuman.superhuman.ui.MainActivity
+
+msi_router:
+  - com.msi.msirouter/com.msi.msirouter.WelcomeActivity
+
+spox:
+  - com.spox.mobileclient/com.perform.livescores.presentation.views.activities.SplashActivity
+
+pixelix:
+  - com.daniebeler.pfpixelix/com.daniebeler.pfpixelix.MainActivity
+
+venera:
+  - com.github.wgh136.venera/com.github.wgh136.venera.MainActivity
+
+langley_mobile_banking:
+  - com.aci.langley.mobile/com.lumindigital.MainActivity
+
+floccus:
+  - org.handmadeideas.floccus/org.handmadeideas.floccus.MainActivity
+
+deepseek:
+  - com.deepseek.chat/com.deepseek.chat.MainActivity
+
+smarthome_telus:
+  - com.alarm.alarmmobile.android.telus/com.alarm.alarmmobile.android.feature.auth.login.LoginActivity
+
+skool:
+  - com.skool.skoolcommunities/com.skool.skoolcommunities.ui.activities.MainActivity
+
+octo:
+  - dev.bg.octo/dev.bg.octo.MainActivity
+
+sleep_timer:
+  - com.baylife.sleeptimer/com.baylife.sleeptimer.activity.MainActivity
