--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -207,3 +207,13 @@ octo:
 
 sleep_timer:
   - com.baylife.sleeptimer/com.baylife.sleeptimer.activity.MainActivity
+
+kanji_dojo:
+  - ua.syt0r.kanji/ua.syt0r.kanji.presentation.screen.main.GooglePlayMainActivity
+
+leroy_merlin:
+  - com.adeo.android.app/com.lmfr.applm.onboarding.activities.onboarding.OnBoardingActivity
+
+compass:
+  - com.taymay.compass/taymay.compass.ads.SplashActivity
+  - com.transsion.compass/com.transsion.compass.CompassActivity
