--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -205,7 +205,7 @@ skool:
 octo:
   - dev.bg.octo/dev.bg.octo.MainActivity
 
-sleep_timer:
+sleep_timer_audio_video:
   - com.baylife.sleeptimer/com.baylife.sleeptimer.activity.MainActivity
 
 kanji_dojo:
