--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,63 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+vivo_store:
+  - com.vivo.appstore/com.vivo.appstore.activity.LaunchActivity
+
+veek:
+  - br.com.veek.app/br.com.veek.app.MainActivity
+
+satisfyer_connect:
+  - com.satisfyer.connect/com.coreteka.satisfyer.view.screen.auth.LoginActivity
+
+tella_classes:
+  - com.abi.tella/com.abi.tella.MainActivity
+
+coffy:
+  - com.trcoffy.live/com.superapp.homelesschef.MainActivity
+
+alpine_quest:
+  - psyberia.alpinequest.free/psyberia.alpinequest.free.AlpineQuestActivity
+
+gopuff:
+  - com.main.gopuff/com.main.gopuff.presentation.login.OnboardingActivity
+
+capybara_go:
+  - com.habby.capybara/com.unity3d.player.UnityPlayerActivity
+
+developer_options_shortcut:
+  - org.aospstudio.devoptions/com.aospstudio.shortcuts.MainActivity
+
+elgato_stream_deck_mobile:
+  - com.corsair.android.streamdeck/com.elgato.streamdeck.MainActivity
+
+plant_identifier_care:
+  - greg.io.care_app_android/greg.io.care_app_android.MainActivity
+
+fly_taxi:
+  - com.flytaxi.hktaxi/com.hktaxi.hktaxi.activity.splashScreen.SplashScreenActivity
+
+lega_serie_a:
+  - com.gullivernet.mdc.android.gui.seriea/com.origins.splash.SplashActivity
+
+apkcombo_installer:
+  - com.apkcombo.app/com.apkcombo.app.ui.activities.MainActivity
+
+split_screen:
+  - any.splitscreen/any.splitscreen.ui.MainActivity
+
+shorts_vottak:
+  - com.omnewgentechnologies.vottak/com.smartdynamics.MainActivity
+
+baidu_maps:
+  - com.baidu.BaiduMap/com.baidu.baidumaps.WelcomeScreen.Alias0
+
+epic_haiku:
+  - com.epic.haiku.android/com.epic.haiku.android.HaikuLoginActivity
+
+mailfence:
+  - com.contactoffice.mailfence/com.contactoffice.mailfence.MainActivity
+
+cider:
+  - com.cider/com.cider.ui.activity.splash.WelcomeActivity
