--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,6 +30,7 @@ coffy:
 
 alpine_quest:
   - psyberia.alpinequest.free/psyberia.alpinequest.free.AlpineQuestActivity
+  - psyberia.alpinequest.full/psyberia.alpinequest.full.AlpineQuestActivity
 
 gopuff:
   - com.main.gopuff/com.main.gopuff.presentation.login.OnboardingActivity
@@ -72,3 +73,12 @@ mailfence:
 
 cider:
   - com.cider/com.cider.ui.activity.splash.WelcomeActivity
+
+pdf_reader:
+  - pdf.pdfreader.pdfviewer.pdfeditor/com.office.pdfreader.ui.splash.SplashActivity
+
+subway:
+  - com.subway.mobile.emea.tuki/com.subway.mobile.subwayapp03.ui.SplashActivity
+
+barcelona:
+  - com.fcbarcelona.one/com.fcbarcelona.one.MainActivity
