--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -82,3 +82,63 @@ subway:
 
 barcelona:
   - com.fcbarcelona.one/com.fcbarcelona.one.MainActivity
+
+liverpool_fc_store:
+  - com.store.liverpoolfc/com.poqstudio.app.platform.presentation.splash.view.SplashActivity
+
+codmunity:
+  - com.app.codmobileloadout2/com.app.codmobileloadout2.MainActivity
+
+mqtt_dash:
+  - net.routix.mqttdash/net.routix.mqttdash.BrokersListActivity
+
+liverpool_compras_online:
+  - mx.com.liverpool.shoppingapp/mx.com.liverpool.shoppingapp.splash.view.SplashActivity
+
+fast_pair_validator:
+  - com.google.location.nearby.apps.fastpair.validator/com.google.location.nearby.apps.fastpair.validator.WelcomeActivity
+
+little_nightmares:
+  - com.playdigious.littlenightmare/com.epicgames.ue4.SplashActivity
+
+wibuku:
+  - wibuku.app.wibuku/wibuku.app.wibuku.ui.main.MainActivity
+
+writco:
+  - in.writco.app/in.writco.app.MainActivity
+
+dicttango:
+  - cn.jimex.dict/cn.jimex.dict.ui.activities.main.MainActivity
+
+tenda_wifi:
+  - com.tenda.router.app/com.tenda.login.splash.FullscreenActivity
+
+what_is_my_ip_address:
+  - app.whatismyipaddress/app.whatismyipaddress.android.MainActivity
+
+shutterstock_contributor:
+  - com.shutterstock.contributor/com.shutterstock.contributor.activities.LauncherStartActivity
+
+one_piece_base:
+  - com.bandainamcoent.onepiece_base/com.onepiece_base_android.MainActivity
+
+curious_cat:
+  - com.pawoints.curiouscat/com.pawoints.curiouscat.SplashActivity
+
+daily_tasks:
+  - app.daily_tasks/app.daily_tasks.MainActivity
+
+publix:
+  - com.publix.main/com.shockoe.publix.flagship.MainActivity
+
+la_lakers:
+  - com.lucidappeal.appmold/com.yinzcam.nba.mobile.home.NBAHomeActivity
+
+tiptop_vpn:
+  - com.free.tiptop.vpn.proxy/com.tiptopvpn.app.ui.SplashActivity
+
+tubee:
+  - com.mercandalli.android.apps.youtube/com.mercandalli.android.apps.youtube.main_activity.MainActivity
+
+time_tracker:
+  - com.rk.timemeter/com.rk.timemeter.MainActivity
