--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -142,3 +142,12 @@ tubee:
 
 time_tracker:
   - com.rk.timemeter/com.rk.timemeter.MainActivity
+
+angkas:
+  - com.angkas.customer/com.angkas.cax.MainActivity
+
+pilipalax:
+  - com.example.pilipalax/com.example.pilipalax.MainActivity
+
+calculator:
+  - com.calculator.lock.hide.photo.video/com.calculator.lock.hide.photo.video.activity.home_activities.LoadingActivity
