--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -151,3 +151,60 @@ pilipalax:
 
 calculator:
   - com.calculator.lock.hide.photo.video/com.calculator.lock.hide.photo.video.activity.home_activities.LoadingActivity
+
+xplicit_trust_network_access:
+  - com.xplicittrust.app/com.xplicittrust.app.ui.MainActivity
+
+nightscout_pro:
+  - com.nightscoutpro.app/com.nightscoutpro.app.MainActivity
+
+wansview_cloud:
+  - net.ajcloud.wansviewplus/net.ajcloud.wansviewplus.main.welcome.SplashActivity
+
+virgin_money:
+  - com.virginmoney.uk.mobile.android/com.thenational.launcher.MainAppEntryPointActivity
+
+ace_hardware:
+  - com.acehardware.rewards/com.acehardware.MainActivity
+
+with_love:
+  - nl.withlove.app/nl.withlove.app.activities.MainActivity
+
+bw_mobilbanking:
+  - com.starfinanz.smob.android.bwmobilbanking/com.starfinanz.smob.android.bwmobilbanking.LauncherActivity
+
+nelo:
+  - co.nelo.nelo/co.nelo.nelo.MainActivity
+
+burn_guide_dust:
+  - nexus.concepts.dust/nexus.concepts.dust.MainActivity
+
+healow:
+  - com.ecw.healow/com.ecw.healow.MainActivity
+
+cemu:
+  - info.cemu.Cemu/info.cemu.Cemu.MainActivity
+
+noteshelf3:
+  - com.fluidtouch.noteshelf3/com.fluidtouch.noteshelf.compose.FTBaseShelfComposeActivity
+
+mwh:
+  - com.melissawoodhealth/com.melissawoodhealth.LaunchActivity
+
+run_pro:
+  - com.run.pro/com.unity3d.player.UnityPlayerActivity
+
+doccit:
+  - doccitab.doccit/doccitab.doccit.MainActivity
+
+alat:
+  - com.wemabank.alat.prod/crc64944946ad7d7f913c.LandingPageActivity
+
+stay_focused:
+  - com.stayfocused/com.stayfocused.splash.SplashActivity
+
+postbank_bestsign:
+  - de.postbank.bestsign/com.db.dbmobile.unity.feature.splash.SplashActivity
+
+jumia:
+  - com.jumia.android/com.mobile.splash.SplashScreenActivity
