--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -208,3 +208,33 @@ postbank_bestsign:
 
 jumia:
   - com.jumia.android/com.mobile.splash.SplashScreenActivity
+
+clauncher:
+  - app.clauncher/app.clauncher.MainActivity
+
+opentopomap:
+  - org.nitri.opentopo/org.nitri.opentopo.MainActivity
+
+gitsync:
+  - com.viscouspot.gitsync/com.viscouspot.gitsync.MainActivity
+
+termuc:
+  - cn.rbc.termuc/cn.rbc.termuc.MainActivity
+
+trigger_foss:
+  - com.example.trigger/app.trigger.MainActivity
+
+bvd:
+  - cc.kafuu.bilidownload/cc.kafuu.bilidownload.view.activity.MainActivity
+
+valet:
+  - finance.valet/finance.valet.MainActivity
+
+pagan:
+  - com.qfs.pagan/com.qfs.pagan.MainActivity
+
+droid_pad:
+  - com.github.umer0586.droidpad/com.github.umer0586.droidpad.MainActivity
+
+miniflutt:
+  - be.martinelli.miniflutt/io.flutter.embedding.android.FlutterActivity
