add icons premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -13,7 +13,6 @@
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
 
-
 verizon_cloud:
   - com.vcast.mediamanager/com.vcast.mediamanager.gui.activities.SplashLogoActivity
 
@@ -34,3 +33,9 @@ australiansuper:
 
 inshare:
   - sharefiles.sharemusic.shareapps.filetransfer/com.inshot.filetransfer.SplashActivity
+
+edifier_connect:
+  - com.edifier.edifierconnect/com.edifier.edifierconnect.StartPageNewActivity
+
+real_sports:
+  - vg.real/vg.real.SplashActivity
