--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,30 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+verizon_cloud:
+  - com.vcast.mediamanager/com.vcast.mediamanager.gui.activities.SplashLogoActivity
+
+epic_freebie_games_radar:
+  - com.arioch.efgr/com.arioch.efgr.MainActivity
+
+dismail:
+  - com.vercel.riblink.disposemail/com.vercel.riblink.disposemail.MainActivity
+
+music_party:
+  - com.coloros.musiclink/com.coloros.musiclink.ui.MainActivity
+
+imou_life:
+  - com.mm.android.smartlifeiot/com.mm.android.easy4ip.SplashActivity
+
+australiansuper:
+  - com.australiansuper.android.australiansuper/com.australiansuper.android.australiansuper.views.splash.SplashActivity
+
+inshare:
+  - sharefiles.sharemusic.shareapps.filetransfer/com.inshot.filetransfer.SplashActivity
+
+edifier_connect:
+  - com.edifier.edifierconnect/com.edifier.edifierconnect.StartPageNewActivity
+
+real_sports:
+  - vg.real/vg.real.SplashActivity
