add missing compinfos gathered from emails

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,9 @@ edifier_connect:
 
 real_sports:
   - vg.real/vg.real.SplashActivity
+
+peristyle:
+  - app.simple.peri/app.simple.peri.activities.main.MainComposeActivity
+
+to_dont:
+  - rocks.poopjournal.todont/rocks.poopjournal.todont.SplashScreenActivity
