--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 		minSdkVersion rootProject.ext.MinSdk
 		targetSdkVersion rootProject.ext.TargetSdk
 		versionCode 200003
-		versionName "2.0.0-beta3"
+		versionName "2.0.0-beta.3"
 		multiDexEnabled true
 
 		// Naming app bundles
