--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -60,6 +60,7 @@ phocid:
 
 podcini:
   - ac.mdiq.podcini.R/ac.mdiq.podcini.ui.activity.SplashActivity
+  - ac.mdiq.podcini.X/ac.mdiq.podcini.ui.activity.SplashActivity
 
 retro_drawing:
   - com.github.msx80.retrodrawing/com.github.msx80.omicron.AndroidLauncher
@@ -72,3 +73,12 @@ seamless:
 
 url_sanitizer:
   - moe.dic1911.urlsanitizer/moe.dic1911.urlsanitizer.MainActivity
+
+db_bahnbonus:
+  - com.deutschebahn.bahnbonus/com.deutschebahn.bahnbonus.ui.login.LoginActivityInitial
+
+to_dont:
+  - rocks.poopjournal.todont/rocks.poopjournal.todont.SplashScreenActivity
+
+vacation_days:
+  - rocks.poopjournal.vacationdays/rocks.poopjournal.vacationdays.MainActivity2
