--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,46 @@ edifier_connect:
 
 real_sports:
   - vg.real/vg.real.SplashActivity
+
+catshare:
+  - moe.reimu.catshare/moe.reimu.catshare.MainActivity
+
+emotic:
+  - futuristicgoo.emotic/futuristicgoo.emotic.MainActivity
+
+ied:
+  - at.krixec.ied/com.godot.game.GodotApp
+
+ksuwebui:
+  - io.github.a13e300.ksuwebui/io.github.a13e300.ksuwebui.MainActivity
+
+monster_music:
+  - com.ztftrue.music/com.ztftrue.music.MainActivity
+
+phocid:
+  - org.sunsetware.phocid/org.sunsetware.phocid.MainActivity
+
+podcini:
+  - ac.mdiq.podcini.R/ac.mdiq.podcini.ui.activity.SplashActivity
+  - ac.mdiq.podcini.X/ac.mdiq.podcini.ui.activity.SplashActivity
+
+retro_drawing:
+  - com.github.msx80.retrodrawing/com.github.msx80.omicron.AndroidLauncher
+
+scanbridge:
+  - io.github.chrisimx.scanbridge/io.github.chrisimx.scanbridge.MainActivity
+
+seamless:
+  - org.woheller69.seemless/com.seamless.DownloadActivity
+
+url_sanitizer:
+  - moe.dic1911.urlsanitizer/moe.dic1911.urlsanitizer.MainActivity
+
+db_bahnbonus:
+  - com.deutschebahn.bahnbonus/com.deutschebahn.bahnbonus.ui.login.LoginActivityInitial
+
+to_dont:
+  - rocks.poopjournal.todont/rocks.poopjournal.todont.SplashScreenActivity
+
+vacation_days:
+  - rocks.poopjournal.vacationdays/rocks.poopjournal.vacationdays.MainActivity2
