--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -40,6 +40,9 @@ edifier_connect:
 real_sports:
   - vg.real/vg.real.SplashActivity
 
+peristyle:
+  - app.simple.peri/app.simple.peri.activities.main.MainComposeActivity
+
 catshare:
   - moe.reimu.catshare/moe.reimu.catshare.MainActivity
 
