--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,5 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+smart_autoclicker:
+  - com.buzbuz.smartautoclicker/com.buzbuz.smartautoclicker.scenarios.ScenarioActivity
