Add icons & Update ComponentInfo (#1096)
* Update icons.yml

- Smart AutoClicker

* Add 3 icons

- PeerTube
- takesama
- Wnn Keyboard Lab

* adjust alignment

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,12 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+smart_autoclicker:
+  - com.buzbuz.smartautoclicker/com.buzbuz.smartautoclicker.scenarios.ScenarioActivity
+peertube:
+  - org.framasoft.peertube/org.framasoft.peertube.MainActivity
+  - org.framasoft.peertube.nightly/org.framasoft.peertube.MainActivity
+takesama:
+  - com.takesama.app/com.takesama.app.MainActivity
+wnn_keyboard_lab:
+  - jp.co.omronsoft.wnnlab/jp.co.omronsoft.wnnlab.WnnFlagmentActivity
