--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,12 +12,37 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
 smart_autoclicker:
   - com.buzbuz.smartautoclicker/com.buzbuz.smartautoclicker.scenarios.ScenarioActivity
+
 peertube:
   - org.framasoft.peertube/org.framasoft.peertube.MainActivity
   - org.framasoft.peertube.nightly/org.framasoft.peertube.MainActivity
+
 takesama:
   - com.takesama.app/com.takesama.app.MainActivity
+  
 wnn_keyboard_lab:
   - jp.co.omronsoft.wnnlab/jp.co.omronsoft.wnnlab.WnnFlagmentActivity
+
+block_puzzle:
+  - com.staplegames.blocksClassicSGGP/com.staplegames.blocksClassicSGGP.MainActivity
+
+mqtt_dashboard:
+  - com.app.vetru.mqttdashboard/com.app.vetru.mqttdashboard.ui.Activity_Main
+
+openscale_sync:
+  - com.health.openscale.sync/com.health.openscale.sync.gui.MainActivity
+
+paycom:
+  - com.paycom.mobile.ess/com.paycom.mobile.ess.splashscreen.SplashActivity
+
+rakuten_travel:
+  - jp.co.rakuten.travel.andro/jp.co.rakuten.travel.andro.activity.Opening
+
+sears:
+  - com.americamovil.sears/h2de9d656.r637a4c0c.o4f0c7cfe.ui.tb7845f2a
+
+wallbyte_wallpapers:
+  - com.wallbyte.wallpapers/com.wallbyte.wallpapers.main.SplashAPIActivity
