--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -22,7 +22,7 @@ peertube:
 
 takesama:
   - com.takesama.app/com.takesama.app.MainActivity
-  
+
 wnn_keyboard_lab:
   - jp.co.omronsoft.wnnlab/jp.co.omronsoft.wnnlab.WnnFlagmentActivity
 
@@ -46,3 +46,9 @@ sears:
 
 wallbyte_wallpapers:
   - com.wallbyte.wallpapers/com.wallbyte.wallpapers.main.SplashAPIActivity
+
+ffxiv_companion:
+  - com.square_enix.android_googleplay.ffxivcomapp_n/com.ffxiv.sight.view.SplashActivity
+
+amex:
+  - com.americanexpress.android.acctsvcs.nz/com.americanexpress.android.intl.app.view.activity.SplashInitializationActivity
