--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -52,3 +52,7 @@ ffxiv_companion:
 
 amex:
   - com.americanexpress.android.acctsvcs.nz/com.americanexpress.android.intl.app.view.activity.SplashInitializationActivity
+
+sber_kids:
+  - ru.sberbank.sberkids/ru.sberbank.sberkids.main.MainActivity
+  - ru.sberbank.sberkids/ru.sberbank.sberkids.MainActivity
