new icon: Morgen

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -56,3 +56,6 @@ amex:
 sber_kids:
   - ru.sberbank.sberkids/ru.sberbank.sberkids.main.MainActivity
   - ru.sberbank.sberkids/ru.sberbank.sberkids.MainActivity
+
+morgen:
+  - so.morgen.morgen/so.morgen.morgen.MainActivity
