new icon: Teamsport Karting UK

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -59,3 +59,6 @@ sber_kids:
 
 morgen:
   - so.morgen.morgen/so.morgen.morgen.MainActivity
+
+teamsport_karting_uk:
+  - com.teamsport.scotkartcambuslang/com.teamsport.scotkartcambuslang.MainActivity
