new icon: HamStudy

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -62,3 +62,6 @@ morgen:
 
 teamsport_karting_uk:
   - com.teamsport.scotkartcambuslang/com.teamsport.scotkartcambuslang.MainActivity
+
+hamstudy:
+  - org.hamstudy.mobile/org.hamstudy.mobile.MainActivity
