--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -52,3 +52,16 @@ ffxiv_companion:
 
 amex:
   - com.americanexpress.android.acctsvcs.nz/com.americanexpress.android.intl.app.view.activity.SplashInitializationActivity
+
+sber_kids:
+  - ru.sberbank.sberkids/ru.sberbank.sberkids.main.MainActivity
+  - ru.sberbank.sberkids/ru.sberbank.sberkids.MainActivity
+
+morgen:
+  - so.morgen.morgen/so.morgen.morgen.MainActivity
+
+teamsport_karting_uk:
+  - com.teamsport.scotkartcambuslang/com.teamsport.scotkartcambuslang.MainActivity
+
+hamstudy:
+  - org.hamstudy.mobile/org.hamstudy.mobile.MainActivity
