--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+nib:
+  - au.com.nib/au.com.nib.features.splash.ui.SplashScreenActivity
