add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,24 @@
 
 nib:
   - au.com.nib/au.com.nib.features.splash.ui.SplashScreenActivity
+
+exerprise_workout_meal_planner:
+  - com.anabolicaliens.exerprise/com.anabolicaliens.exerprise.SplashActivity
+
+little_caesars:
+  - com.littlecaesars/com.littlecaesars.startup.StartUpActivity
+
+pimsleur:
+  - com.simonandschuster.pimsleur.unified.android/com.pimsleur.MainActivity
+
+plane_finder:
+  - com.pinkfroot.planefinderfree/com.pinkfroot.planefinder.ui.MainActivity
+
+vesync:
+  - com.etekcity.vesyncplatform/com.etekcity.vesyncplatform.presentation.ui.activities.LaunchActivity
+
+wonder_fridge:
+  - com.meolly.fridge/com.meolly.fridge.ui.screen.MainActivity
+
+woot:
+  - com.woot.android.main/com.woot.android.main.MainActivity
