--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,10 @@ wonder_fridge:
 
 woot:
   - com.woot.android.main/com.woot.android.main.MainActivity
+
+discover_mobile:
+  - com.discoverfinancial.mobile/h520d1760.wa2d536d8.e4f350aef.l62f02911
+  - com.discoverfinancial.mobile/g1cdff8d2.i718b9092.s636e8aa1.lec0a894c
+
+dutch_bros:
+  - com.dutchbros.loyalty/com.dutchbros.loyalty.dutch_bros_forge.MainActivity
