--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -43,3 +43,30 @@ discover_mobile:
 
 dutch_bros:
   - com.dutchbros.loyalty/com.dutchbros.loyalty.dutch_bros_forge.MainActivity
+
+ciyue:
+  - org.eu.mumulhl.ciyue/org.eu.mumulhl.ciyue.MainActivity
+
+eidetic:
+  - io.github.hathibelagal.eidetic/io.github.hathibelagal.eidetic.MainActivity
+
+fintunes:
+  - nl.moeilijkedingen.jellyfinaudioplayer/nl.moeilijkedingen.jellyfinaudioplayer.MainActivity
+
+habit_maker:
+  - com.dessalines.habitmaker/com.dessalines.habitmaker.MainActivity
+
+keysh:
+  - io.github.hufrea.keysh/io.github.hufrea.keysh.ActivityMain
+
+nfcgate:
+  - de.tu_darmstadt.seemoo.nfcgate/de.tu_darmstadt.seemoo.nfcgate.gui.MainActivity
+
+open_alert_viewer:
+  - studio.okcode.open_alert_viewer/studio.okcode.open_alert_viewer.MainActivity
+
+rivo:
+  - com.grinch.rivo/com.grinch.rivo.MainActivity
+
+sound_remote:
+  - io.github.soundremote/io.github.soundremote.MainActivity
