--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -70,3 +70,18 @@ rivo:
 
 sound_remote:
   - io.github.soundremote/io.github.soundremote.MainActivity
+
+sherpa_tts:
+  - org.woheller69.ttsengine/com.k2fsa.sherpa.onnx.tts.engine.MainActivity
+
+mi_movistar:
+  - com.telefonica.movistar/com.telefonica.movistar.SplashScreen
+
+credit_karma:
+  - com.creditkarma.mobile.international/com.creditkarma.mobile.international.landing.ui.LandingActivity
+
+linked__in:
+  - com.linkedin.android/com.linkedin.android.authenticator.NYEFestivalActivityAlias
+
+airtel:
+  - com.tsdc.selfcare/com.tsdc.selfcare.MainActivity
